# geenii

./: .aiignore  .dockerignore  .gitignore  Dockerfile  README.md  autobuild.sh  build_bin.sh  build_desktop.sh  build_updates_json.sh  build_wheel.sh  bump_version.py  compose-tts.yaml  compose.yaml  pyproject.toml  release.sh  testclient.sh
.github/workflows/: publish_desktop.yml  publish_image.yml
docs/: completion.md  imagegen.md  index.md  mcp_servers.md  whisper.md  wizards.md
docs/developer-guide/: api-quickstart.md  create-release.md  flows.md  function_calling.md  index.md
docs/developer-guide/python/: python-os-detection.md
docs/developer-guide/tauri/: create-release.md  icons.md  updater.md
docs/reference/cli/: skills.md  wizard.md
docs/user-guide/flows/: nodes.md  overview.md
docs/user-guide/generation/: text-generation.md
examples/wizards/: classification.py  decision_maker.py
scripts/: llamacpp.sh  osm.sh  sd.sh  sd_build.sh  sd_download.sh  whisper.sh  whisper_build.sh  ximggen_flux.sh  xtts.sh
src/: chatcli.py  cli.py  server.py
src/geenii/: agent.py  agents.py  ai.py  apps.py  config.py  datamodels.py  example_bots.py  g.py  hidl.py  logging.py  mcp.py  memory.py  modelstore.py  rt.py  sandbox.py  scheduler.py  service.py  settings.py  skills.py  store.py  supervisor.py  tools.py  util.py  wizards.py
src/geenii/agent/: base.py  base_agent.py  registry.py  tasks.py  utils.py
src/geenii/assistants/: memory.py  models.py
src/geenii/builtin/: builtin_tools.py
src/geenii/chat/: chat_bots.py  chat_client.py  chat_manager.py  chat_models.py  chat_server.py  chat_server_core.py  chat_server_ctx.py  chat_server_ext_discord.py  chat_server_routes.py  memory.py
src/geenii/cli/: agents.py  ai.py  base.py  chat_client.py  chat_client_inputs.py  gcli.py  info.py  skills.py  tools.py  tts.py  wizards.py
src/geenii/core/: core_tools.py  tasks.py  tools.py
src/geenii/db/: mongodb.py  redis.py
src/geenii/flows/: graph.py
src/geenii/mcp/: client.py
src/geenii/provider/: interfaces.py
src/geenii/server/: deps.py  router.py
src/geenii/tool/: registry.py
src/geenii/utils/: asyncify.py  cached.py  json_util.py  modelstore.py  mongodb.py  os_util.py  redis.py  system_util.py
src/geenii/wizard/: base.py  completion.py  default.py
src/tests/geenii/: test_modelstore.py  test_modelstore_mongo.py  test_modelstore_redis.py
ui/: .dockerignore  .env.production  .gitignore  Dockerfile  README.md  build-desktop.sh  build.sh  index.html  package.json  pnpm-lock.yaml  shadcn_add.sh  vite.config.ts
ui/container/: nginx.conf
ui/docs/: updater.md
ui/public/: create-task.html
ui/public/assets/: ollama-model-catalog.json
ui/src/: Animate.scss  App.scss  App.tsx  app-router.tsx  app-socket.tsx  constants.ts  convo.ts  init.ts  main.tsx  tailwind.css
ui/src-tauri/: Cargo.toml  Entitlements.sandbox.plist  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: docker.rs  lib.rs  main.rs  server.rs
ui/src/api/: ollama-api.ts  openai.types.ts  tauri-docker-mcp-api.ts  xai-tauri.ts  xai-web.ts  xai.types.ts
ui/src/assets/: config.json
ui/src/components/: Popup.tsx  TypewriterText.tsx  filterable-select.tsx  header.tsx  json-debug-view.tsx  json-view.tsx  output-data-markdown.tsx  split-layout-h.tsx
ui/src/context/: AppContext.tsx  AppContextProvider.tsx  ServerContext.tsx  ServerContextProvider.tsx
ui/src/hooks/: useNotification.ts
ui/src/ui/: Badge.tsx  Button.tsx  Container.tsx  FloatingUIList.tsx  HSplitLayout.tsx  LoadingText.tsx  PopupDemo.tsx  SelectDropdown.tsx  index.ts  (+4 more)
updater-scripts/: func.inc.php  release.php  updater.php
(+173 files in other folders)
