[project]
name = "geenii"
version = "0.1.0"
description = "Hybrid AI orchestration platform for llms and agents."
requires-python = ">=3.13,<4.0"
dependencies = [
    "accelerate>=1.9.0",
    "anthropic>=0.59.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.3.1",
    "diffusers>=0.34.0",
    "discord-py>=2.6.4",
    "en-core-web-sm",
    "fastapi>=0.116.1",
    "fastapi-websocket-pubsub>=1.0.1",
    "fastmcp>=2.10.6",
    "graphviz>=0.21",
    "huggingface>=0.0.1",
    "ipython>=9.4.0",
    "llama-index>=0.12.49",
    "llama-index-embeddings-huggingface>=0.5.5",
    "llama-index-llms-ollama>=0.6.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.1",
    "ollama>=0.5.1",
    "openpyxl>=3.1.5",
    "pip>=25.1.1",
    "py-key-value-aio>=0.3.0",
    "pydantic>=2.11.7",
    "pymongo>=4.15.5",
    "pymupdf>=1.26.3",
    "scikit-image>=0.25.2",
    "sentence-transformers>=5.0.0",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "transformers>=4.53.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" }

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "testcontainers>=4.13.3",
]
