[project]
name = "geenii"
version = "0.1.1"
description = "Hybrid AI orchestration platform for llms and agents."
requires-python = ">=3.13,<4.0"
dependencies = [
    "anthropic>=0.59.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.3.1",
    "discord-py>=2.6.4",
    "fastapi>=0.116.1",
    "fastapi-websocket-pubsub>=1.0.1",
    "fastmcp>=2.10.6",
    "ollama>=0.5.1",
    "openai>=2.21.0",
    "py-key-value-aio>=0.3.0",
    "pydantic>=2.11.7",
    "pymongo>=4.15.5",
    "toml>=0.10.2",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "testcontainers>=4.13.3",
]
