[project]
name = "geenii"
version = "0.3.0"
description = "Hybrid AI orchestration platform for llms and agents."
requires-python = ">=3.13,<4.0"
dependencies = [
    "anthropic>=0.59.0",
    "beautifulsoup4>=4.13.4",
    "click>=8.3.1",
    "croniter>=6.0.0",
    "discord>=2.3.2",
    "discord-py>=2.6.4",
    "fastapi>=0.128.5",
    "fastapi-websocket-pubsub>=1.0.1",
    "fastmcp>=2.10.6",
    "httpx>=0.28.0",
    "ollama>=0.5.1",
    "openai>=2.21.0",
    "psutil>=7.2.2",
    "py-key-value-aio>=0.3.0",
    "pydantic>=2.12.5",
    "pymongo>=4.15.5",
    "rich>=14.3.3",
    "sse-starlette>=2.0.0",
    "tomli-w>=1.2.0",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
    "pytest>=9.0.2",
    "redis>=7.2.1",
    "testcontainers>=4.13.3",
]
