[package]
name = "geenii-desktop"
version = "0.1.3"
description = "A Tauri App"
authors = [
    "you",
]
edition = "2021"

[lib]
name = "geenii_desktop_lib"
crate-type = [
    "staticlib",
    "cdylib",
    "rlib",
]

[build-dependencies.tauri-build]
version = "2"
features = []

[dependencies]
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde_json = "1"
tauri-plugin-process = "2"

[dependencies.tauri]
version = "2"
features = [
    "tray-icon",
    "image-ico",
    "image-png",
]

[dependencies.serde]
version = "1"
features = [
    "derive",
]

[dependencies.tokio]
version = "1.46.1"
features = [
    "full",
]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-updater = "2"
